syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "PlayerDieType.proto";
import "ServerBuff.proto";


message LifeStateChangeNotify {
	string attack_tag = 6;
	uint32 move_reliable_seq = 8;
	uint32 life_state = 12;
	uint32 source_entity_id = 11;
	uint32 entity_id = 3;
	PlayerDieType die_type = 7;
	repeated ServerBuff server_buff_list = 14;
}